Collapse upload and dump routes in lsif-server.
