# lsif/src/server/routes/lsif.ts
@@ -143,7 +143,7 @@ export function createLsifRouter(
         path: string
         line: number
         character: number
-        dumpId?: number
+        uploadId?: number
     }
 
     router.get(
@@ -154,16 +154,23 @@ export function createLsifRouter(
             validation.validateNonEmptyString('path'),
             validation.validateInt('line'),
             validation.validateInt('character'),
-            validation.validateOptionalInt('dumpId'),
+            validation.validateOptionalInt('uploadId'),
         ]),
         wrap(
             async (req: express.Request, res: express.Response): Promise<void> => {
-                const { repository, commit, path, line, character, dumpId }: FilePositionArgs = req.query
+                const { repository, commit, path, line, character, uploadId }: FilePositionArgs = req.query
                 const ctx = createTracingContext(req, { repository, commit, path })
 
-                const locations = await backend.definitions(repository, commit, path, { line, character }, dumpId, ctx)
+                const locations = await backend.definitions(
+                    repository,
+                    commit,
+                    path,
+                    { line, character },
+                    uploadId,
+                    ctx
+                )
                 if (locations === undefined) {
-                    throw Object.assign(new Error('LSIF dump not found'), { status: 404 })
+                    throw Object.assign(new Error('LSIF upload not found'), { status: 404 })
                 }
 
                 res.send({
@@ -191,13 +198,13 @@ export function createLsifRouter(
             validation.validateNonEmptyString('path'),
             validation.validateInt('line'),
             validation.validateInt('character'),
-            validation.validateOptionalInt('dumpId'),
+            validation.validateOptionalInt('uploadId'),
             validation.validateLimit,
             validation.validateCursor<ReferencePaginationCursor>(),
         ]),
         wrap(
             async (req: express.Request, res: express.Response): Promise<void> => {
-                const { repository, commit, path, line, character, dumpId, cursor }: ReferencesQueryArgs = req.query
+                const { repository, commit, path, line, character, uploadId, cursor }: ReferencesQueryArgs = req.query
                 const { limit } = extractLimitOffset(req.query, settings.DEFAULT_REFERENCES_NUM_REMOTE_DUMPS)
                 const ctx = createTracingContext(req, { repository, commit, path })
 
@@ -207,11 +214,11 @@ export function createLsifRouter(
                     path,
                     { line, character },
                     { limit, cursor },
-                    dumpId,
+                    uploadId,
                     ctx
                 )
                 if (result === undefined) {
-                    throw Object.assign(new Error('LSIF dump not found'), { status: 404 })
+                    throw Object.assign(new Error('LSIF upload not found'), { status: 404 })
                 }
 
                 const { locations, cursor: endCursor } = result
@@ -240,16 +247,16 @@ export function createLsifRouter(
             validation.validateNonEmptyString('path'),
             validation.validateInt('line'),
             validation.validateInt('character'),
-            validation.validateOptionalInt('dumpId'),
+            validation.validateOptionalInt('uploadId'),
         ]),
         wrap(
             async (req: express.Request, res: express.Response): Promise<void> => {
-                const { repository, commit, path, line, character, dumpId }: FilePositionArgs = req.query
+                const { repository, commit, path, line, character, uploadId }: FilePositionArgs = req.query
                 const ctx = createTracingContext(req, { repository, commit, path })
 
-                const result = await backend.hover(repository, commit, path, { line, character }, dumpId, ctx)
+                const result = await backend.hover(repository, commit, path, { line, character }, uploadId, ctx)
                 if (result === undefined) {
-                    throw Object.assign(new Error('LSIF dump not found'), { status: 404 })
+                    throw Object.assign(new Error('LSIF upload not found'), { status: 404 })
                 }
 
                 res.json(result)
